--- a/css/home.css
+++ b/css/home.css
@@ -70,6 +70,22 @@
     height: 500px;
 }
 
+.home-content h1 {
+    animation: titleAnimation 1.5s ease 0s 1 normal both;
+  }
+  
+  @keyframes titleAnimation {
+    0% {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+
 
 .title {
     text-align: center;
